src/test/resources/bad/badParse.out
src/test/resources/bad/badParse.cooma:2:9:error: '}' expected
    foo bar ble
        ^
